fixed CSS picture not showing correct

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -62,17 +62,19 @@
 /* photos */
 .photos {
     display: grid;
-    grid-template-columns: repeat(3, 1fr 2fr 1fr);
-    grid-template-rows: 0.5fr;
-    grid-auto-rows: auto;
-    grid-column-gap: 1%;
-    grid-row-gap: 0px;
-    height: 560px;
+    grid-template-columns: 1fr 2fr 1fr;
+    gap: 2px;
+    max-width: 100vw;
+    height: auto;
+    justify-content: center;
+    align-items: center;
 }
 
 .picsprofile {
-    width: auto;
-    height: 10%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: #F3D9DC solid;
 }
 
 /* songs */
@@ -80,6 +82,7 @@
     border: #F3D9DC solid 2px;
     padding-bottom: 4%;
     margin-bottom: 2%;
+    margin-top: 2%;
     background-color: rgb(0, 0, 0, 0.5);
     color: #F3D9DC;
     text-align: center;
